sys/arch/mips/include/cache_r5k.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: cache_r5k.h,v 1.4 2016/07/11 16:15:35 matt Exp $	*/
+/*	$NetBSD: cache_r5k.h,v 1.5 2020/06/14 15:12:56 tsutsui Exp $	*/
 
 /*
  * Copyright 2001 Wasabi Systems, Inc.
@@ -61,3 +61,13 @@ void	r5k_sdcache_inv_range(register_t, vsize_t);
 void	r5k_sdcache_wb_range(register_t, vsize_t);
 
 #endif /* _KERNEL && !_LOCORE */
+
+#define CACHEOP_R5K_Page_Invalidate_S   0x17
+
+#define R5K_SC_LINESIZE		32
+#define R5K_SC_PAGESIZE		(R5K_SC_LINESIZE * 128)
+#define R5K_SC_PAGEMASK		(R5K_SC_PAGESIZE - 1)
+
+#define mips_r5k_round_page(x)	(((x) + (register_t)R5K_SC_PAGEMASK) \
+				    & (register_t)R5K_SC_PAGEMASK)
+#define mips_r5k_trunc_page(x)	((x) & (register_t)R5K_SC_PAGEMASK)
